extra Jupyter notebook with PyTorch

--- a/racing_01.ipynb
+++ b/racing_01.ipynb
@@ -97,10 +97,9 @@
     }
    ],
    "source": [
-    "cv2.destroyAllWindows()\n",
     "import numpy as np\n",
     "path = np.load(\"path.npy\")\n",
-    "print(path.shape)  # (N, 2)\n"
+    "print(path.shape)  # (N, 2)"
    ]
   },
   {
